Bug 15683 - Running samba-bgqd a a standalone systemd service doesn't work
Summary: Running samba-bgqd a a standalone systemd service doesn't work
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Printing (show other bugs)
Version: 4.20.1
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-07-15 14:19 UTC by Andreas Schneider
Modified: 2024-08-02 12:14 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.20 (1.31 KB, patch)
2024-07-19 13:11 UTC, Andreas Schneider
ab: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2024-07-15 14:19:21 UTC
Running samba-bgqd a a standalone systemd service doesn't work. The daemon doesn't have notifications for systemd on if it runs as a daemon.


Patch will follow.
Comment 1 Samba QA Contact 2024-07-19 11:14:04 UTC
This bug was referenced in samba master:

0a532378322661b23b3393eb2ebde29402a16e62
Comment 2 Andreas Schneider 2024-07-19 13:11:19 UTC
Created attachment 18380 [details]
patch for 4.20
Comment 3 Alexander Bokovoy 2024-07-19 13:12:29 UTC
Comment on attachment 18380 [details]
patch for 4.20

LGTM
Comment 4 Andreas Schneider 2024-07-19 13:13:16 UTC
Jule, could you please apply the patch to 4.20? Thank you!
Comment 5 Jule Anger 2024-07-23 07:32:10 UTC
Pushed to autobuild-v4-20-test.
Comment 6 Samba QA Contact 2024-07-23 08:57:04 UTC
This bug was referenced in samba v4-20-test:

4cf9af9186d7829f11bd07c7d6e526a51dcf0d61
Comment 7 Jule Anger 2024-07-23 09:03:00 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2024-08-02 12:14:42 UTC
This bug was referenced in samba v4-20-stable (Release samba-4.20.3):

4cf9af9186d7829f11bd07c7d6e526a51dcf0d61